--- a/index.html
+++ b/index.html
@@ -45,8 +45,53 @@
             </div>
         </div>
     </nav>
+    <div class="px-4 py-5 my-5 text-center">
+        <img class="d-block mx-auto mb-4" src="images/favicon.ico" alt="logo">
+        <h1 class="display-5 fw-bold text-body-emphasis">Welkom!</h1>
+        <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4">Ik nodig je uit om rond te kijken, geïnspireerd te raken en met mij in contact te komen
+                voor spannende samenwerkingen. Samen kunnen we de grenzen van creativiteit verleggen.</p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <button type="button" class="btn btn-outline-primary btn-lg px-4 gap-3"><a href="contact.html">Laten we
+                        beginnen!</a></button>
+            </div>
+        </div>
+    </div>
     <main class="container pb-2">
-
+        <div class="row pt-3">
+            <div class="col-md mb-3">
+                <a href="ervaringen.html">
+                    <div class="card text-decoration-none">
+                        <img src="images/skills.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Klik hier om wat meer te weten te komen over mijn
+                                skills.</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md mb-3">
+                <a href="cv.html">
+                    <div class="card text-decoration-none">
+                        <img src="images/cv.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Klik hier om mijn CV te bekijken.</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md mb-3">
+                <a href="aboutMe.html">
+                    <div class="card text-decoration-none">
+                        <img src="https://avataaars.io/?avatarStyle=Circle&topType=S…ebrowType=Default&mouthType=Smile&skinColor=Light"
+                            class="card-img-top" alt="placehoder">
+                        <div class="card-body">
+                            <p class="card-text">Klik hier om naar de about me pagina te gaan</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
     </main>
 
     <footer class="container-fluid border-top border-success">
