cv en about me pagina af

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -45,8 +45,25 @@
             </div>
         </div>
     </nav>
-    <main class="container pb-2">
-
+    <main class="container pb-2 pt-3">
+        <div class="row">
+            <div class="col-md-4 align-middle">
+                <img src="images/selfie.jpg" alt="selfie" class="img-fluid">
+            </div>
+            <div class="col-md">
+                <p>
+                    In 2021 ben ik afgestudeerd aan de secundaire school KOSH te Herentals in de studierichting
+                    IT&Netwerken. Hierin heb ik een goede basis aangelegd voor te denken als een programmeur door 2jaar
+                    in de programmeertaal C# te werken. Ook heb ik een jaar gewerkt met MySQL databanken en ook de basis
+                    opstelling van een netwerk gehad. Deze school heeft me doen ontdekken dat er een programmeur in mij
+                    zit. Als aanvulling op deze studie heb ik het afgelopen jaar de opleiding “game development” aan de
+                    HOWEST in Kortrijk gevolgd. Deze opleiding was boeiend en leerrijk, maar helaas vroeg deze meer
+                    creativiteit dan dat ik in mij heb. Ik heb er een jaar ervaring met C++ en de basis voor algoritmes
+                    opgedaan. Ook heb ik daar leren werken met “Photoshop”. Met deze ervaringen en mijn algemene
+                    interesse voor computers zou ik graag in aanmerking komen voor de opleiding Toegepaste Informatica.
+                    Voor meer informatie over mijn opleiding en computer ervaringen verwijs ik u graag naar mijn CV.</p>
+            </div>
+        </div>
     </main>
 
     <footer class="container-fluid border-top border-success">
