--- a/cv.html
+++ b/cv.html
@@ -45,8 +45,47 @@
             </div>
         </div>
     </nav>
-    <main class="container pb-2">
+    <main class="container pb-2 pt-3 cv">
+        <section class="row">
+            <article class="col-md-6">
+                <h2>Personalia</h2>
+                <h3 class="ms-2">Geboortedatum</h3>
+                <p class="ms-2">11-08-2003</p>
+                <h3 class="ms-2">Geboorteplaats</h3>
+                <p class="ms-2">Lier</p>
+                <h3 class="ms-2">Geslacht</h3>
+                <p class="ms-2">Man</p>
+                <h3 class="ms-2">Nationaliteit</h3>
+                <p class="ms-2">Belg</p>
+                <h3 class="ms-2">Burgerlijke staat</h3>
+                <p class="ms-2">Ongehuwd</p>
+                <h3 class="ms-2">Rijbewijs</h3>
+                <p class="ms-2">B</p>
+                <h2>Taalkennis</h2>
+                <ul>
+                    <li>Nederlands 5/5</li>
+                    <li>Engels 4/5</li>
+                    <li>Frans 1/5</li>
+                </ul>
+            </article>
+            <article class="col-md-6">
+                <img src="images/selfie.jpg" alt="selfie" class="rounded-circle">
+                <h2>Opleidingen</h2>
+                <ul>
+                    <li>Graduaat in programmeren Thomas More Geel (2023-heden)</li>
+                    <li>ITF Thomas More Geel (2022-2023)</li>
+                    <li>HOWEST Kortrijk DAE game development(2021-2022)</li>
+                    <li>KOSH Herentals IT&amp;Netwerken(2015-2021)</li>
+                </ul>
+                <h2>Werkervaringen</h2>
+                <ul>
+                    <li>
+                        Aldi te Herselt (nov 2022 - heden)
+                    </li>
+                </ul>
 
+            </article>
+        </section>
     </main>
 
     <footer class="container-fluid border-top border-success">
