--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
             <div class="col-md mb-3">
                 <a href="aboutMe.html">
                     <div class="card text-decoration-none">
-                        <img src="https://avataaars.io/?avatarStyle=Circle&topType=S…ebrowType=Default&mouthType=Smile&skinColor=Light"
-                            class="card-img-top" alt="placehoder">
+                        <img src="images/selfie.jpg" class="card-img-top" alt="selfie">
                         <div class="card-body">
                             <p class="card-text">Klik hier om naar de about me pagina te gaan</p>
                         </div>
