--- a/interesses.html
+++ b/interesses.html
@@ -46,9 +46,110 @@
         </div>
     </nav>
     <main class="container pb-2">
+        <h1>Hobby's</h1>
+        <p>Passies variëren van de adembenemende afdalingen op de besneeuwde pistes van Oostenrijkse skigebieden tot de
+            opwinding van virtuele werelden in gaming. Skiën, een betoverende samensmelting van natuur en avontuur,
+            biedt een onvergetelijke ontsnapping aan de dagelijkse sleur, terwijl gaming, met zijn geavanceerde
+            technologieën, verhalen en gemeenschappen, een wereldwijd fenomeen is geworden. Programmeren, de kunst van
+            het coderen, opent de deur naar digitale innovatie en creativiteit, waardoor abstracte ideeën tastbare
+            realiteit worden. Deze drie uiteenlopende interesses weerspiegelen de diversiteit van moderne passies,
+            variërend van fysieke uitdagingen tot virtuele ontdekkingen, en demonstreren de unieke manieren waarop
+            mensen zich verbinden met de wereld om hen heen.</p>
 
     </main>
+    <div id="carouselExampleIndicators" class="carousel slide">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="d-flex align-items-center">
+                    <div class="flex-shrink-0">
+                        <img src="images/skieen.jpg" class=" d-block" alt="Skiër">
+                    </div>
+                    <div class="ms-3">
+                        <p>
+                            Skiën, een sport doordrenkt met opwinding en avontuur, biedt een unieke manier om te
+                            ontsnappen
+                            aan de dagelijkse routine en te genieten van de pracht van besneeuwde berglandschappen. Met
+                            de
+                            wind die door je haren suist, daal je moeiteloos af over de perfect geprepareerde pistes,
+                            een
+                            gevoel van vrijheid omarmend terwijl de koude bergluch t je wangen streelt. Of je nu een
+                            beginner bent die voorzichtig zijn eerste bochten maakt of een ervaren skiër die de
+                            uitdaging
+                            zoekt van steile hellingen, skiën verbindt mensen met de natuur op een unieke en opwindende
+                            manier.
 
+                            In Warth komt de magie van wintersport samen met de schoonheid van een authentiek
+                            Oostenrijks
+                            bergdorp. Te midden van met sneeuw bedekte chalets en sfeervolle straten biedt dit skigebied
+                            meer dan alleen een indrukwekkend panorama. Of je nu een doorgewinterde skiër bent die de
+                            uitdagende afdalingen verkent of een gezin dat geniet van de brede beginnershellingen, Warth
+                            heeft voor elk wat wils. De betrouwbare sneeuwcondities gedurende het seizoen zorgen voor
+                            een
+                            consistente en hoogwaardige ski-ervaring. Naast de pistes kunnen bezoekers ontspannen in
+                            lokale
+                            berghutten en restaurants, genietend van heerlijke lokale gerechten en de gezellige
+                            après-ski
+                            sfeer. Warth belichaamt de perfecte combinatie van wintersportavontuur en traditionele
+                            Oostenrijkse gastvrijheid, waardoor het een onvergetelijke bestemming is voor elke skiër.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item mb-4">
+                <div class="d-flex align-items-center">
+                    <div class="flex-shrink-0">
+                        <img src="images/programming.jpg" class=" d-block" alt="Skiër">
+                    </div>
+                    <div class="ms-3">
+                        <p>Programmeren, de kunst van het schrijven en structureren van code, is een krachtig
+                            gereedschap dat de digitale wereld vormgeeft. Het stelt individuen in staat om abstracte
+                            ideeën om te zetten in functionele software, waardoor innovatie en technologische
+                            vooruitgang worden aangedreven. Programmeren gaat verder dan enkel commando's schrijven; het
+                            is een creatief proces waarbij problemen worden opgelost, logica wordt toegepast en
+                            efficiënte algoritmes worden gecreëerd. of het nu gaat om het ontwikkelen van websites,
+                            mobiele apps, kunstmatige intelligentie of geavanceerde systemen, programmeren is de sleutel
+                            tot het ontsluiten van de potentie van moderne technologie en het vormgeven van de digitale
+                            toekomst.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item mb-4">
+                <div class="d-flex align-items-center">
+                    <div class="flex-shrink-0">
+                        <img src="images/gaming.jpg" class="h-25" alt="Skiër">
+                    </div>
+                    <div class="ms-3">
+                        <p>Gamen, een dynamische en boeiende vorm van entertainment, heeft zich ontwikkeld tot een
+                            wereldwijde cultuur die mensen van alle leeftijden en achtergronden aanspreekt. Met
+                            geavanceerde technologieën en creatieve storytelling biedt gamen niet alleen een ontsnapping
+                            aan de realiteit, maar ook een interactieve reis naar diverse werelden vol uitdagingen en
+                            avonturen. Of het nu gaat om het oplossen van complexe puzzels, het verkennen van epische
+                            virtuele landschappen of het deelnemen aan intense multiplayer-competities, gaming heeft de
+                            kracht om gemeenschappen te vormen en individuen te verbinden door gedeelde passies en
+                            virtuele ervaringen.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
     <footer class="container-fluid border-top border-success">
         <div class="row mt-1">
             <div class="col">
