ervaringen pagina af

--- a/ervaringen.html
+++ b/ervaringen.html
@@ -45,8 +45,69 @@
             </div>
         </div>
     </nav>
-    <main class="container pb-2">
-
+    <main class="container pb-2 pt-3">
+        <div class="row">
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <blockquote class="blockquote mb-0 row">
+                            <i class="bi bi-file-earmark-code fs-1 col-6"></i>
+                            <footer class="blockquote-footer">C++ 1 jaar</footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <blockquote class="blockquote mb-0 row">
+                            <i class="bi bi-filetype-py fs-1 col-6"></i>
+                            <footer class="blockquote-footer">Python 1 jaar</footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <blockquote class="blockquote mb-0 row">
+                            <i class="bi bi-code-slash fs-1 col-6"></i>
+                            <footer class="blockquote-footer">C# 3 jaar</footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <blockquote class="blockquote mb-0 row">
+                            <i class="bi bi-database fs-1 col-6"></i>
+                            <footer class="blockquote-footer">MySQL 2 jaar</footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <blockquote class="blockquote mb-0 row">
+                            <i class="bi bi-filetype-html fs-1 col-6"></i>
+                            <footer class="blockquote-footer">HTML 2 jaar</footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <blockquote class="blockquote mb-0 row">
+                            <i class="bi bi-filetype-java fs-1 col-6"></i>
+                            <footer class="blockquote-footer">Java 1 jaar</footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="container-fluid border-top border-success">
